tests/base/invalid/List_CompileFail_1.whiley
import whiley.lang.*:*

void ::main(System sys,[string] args):
     x = 1
     a2[0] = x
